syntax = "proto3";

package ProtoSerializer;

message PickItemData {

}

message PoisonActionData {
  int32 hp_decrease = 1;
  int32 duration = 2;
}

message Action {
  enum ActionType {
    PICKITEM = 0;
    POISON = 1;
  }

  ActionType type = 1;
  uint64 selfIdentity = 2;
  uint64 objectIdentity = 3;
  uint64 itemIdentity = 4;
  bool everyTurn = 5;
  oneof data_oneof {
    PickItemData pickItemData = 6;
    PoisonActionData poisonData = 7;
  }
}
